--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "contract:compile": "cd contract && yarn compile"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "ethers": "^6.8.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "viem": "^1.19.5",
     "wagmi": "^1.4.7"
   },
@@ -22,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
