(WIP)add api route to pin file

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,10 @@
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID="9994b1b66996563abbd8ea332fcea69e"
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_NAME="smart-minutes"
 NEXT_PUBLIC_NODE_ENV=dev
+NEXT_PUBLIC_CONTRACT_ADDRESS=""
 # NEXT_PUBLIC_NODE_ENV=production
+
+
+PINATA_API_KEY="SOME_KEY"
+PINATA_API_SECRET="SOME_SECRET"
+PINATA_JWT="JWT_FORMATTED_STRING"
