--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "viem": "^1.19.5",
-    "wagmi": "^1.4.7"
+    "wagmi": "^1.4.7",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
