--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "@svgr/webpack": "^8.1.0",
     "ethers": "^6.8.1",
     "next": "14.0.2",
     "react": "^18",
