feat(ui): conditionally render admin page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "no-mixed-spaces-and-tabs": "error",
+    "indent": [
+      "warn",
+      2
+    ],
+    "semi": [
+      "always"
+    ]
+  }
 }
