--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.6.2",
     "ethers": "^6.8.1",
     "next": "14.0.2",
     "react": "^18",
