--- a/contract/package.json
+++ b/contract/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "scripts": {
     "test": "npx hardhat test",
-    "compile": "npx hardhat compile"
+    "compile": "npx hardhat compile",
+    "dev": "npx hardhat node",
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network hardhat",
+    "deploy:skale": "npx hardhat run scripts/deploy.ts --network skale"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
@@ -17,6 +20,7 @@
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "chai": "^4.3.10",
+    "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "hardhat": "^2.19.0",
     "hardhat-gas-reporter": "^1.0.9",
