--- a/contract/package.json
+++ b/contract/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
-    "dev": "npx hardhat node",
+    "run-node": "npx hardhat node",
     "deploy:local": "npx hardhat run scripts/deploy.ts --network hardhat",
     "deploy:skale": "npx hardhat run scripts/deploy.ts --network skale"
   },
