--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.2",
     "ethers": "^6.8.1",
+    "mime": "^4.0.1",
     "next": "14.0.2",
+    "nft.storage": "^7.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
