--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.2",
     "ethers": "^6.8.1",
+    "firebase": "^10.7.1",
     "mime": "^4.0.1",
     "next": "14.0.2",
     "nft.storage": "^7.1.1",
